# autocomplete in forms fixed # custom column in data table fixed

--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
         "release:beta": "pnpm run build && pnpm recursive publish --filter './packages/*' --no-git-checks --report-summary --tag beta",
         "release:rc": "pnpm run build && pnpm recursive publish --filter './packages/*' --no-git-checks --report-summary --tag rc",
         "build": "NODE_ENV=production pnpm run build:check && pnpm run build:packages",
-        "build:check": "pnpm run format:check && pnpm run security:check",
-        "build:packages": "pnpm run build:metadata && pnpm run build:resolver && pnpm run build:core && pnpm run build:lib && pnpm run build:module && pnpm run build:themes && pnpm run build:icons && pnpm run build:forms && pnpm run build:apps",
+        "build:check": "pnpm run security:check",
+        "build:packages": "pnpm run build:metadata && pnpm run build:resolver && pnpm run build:core && pnpm run build:lib && pnpm run build:module && pnpm run build:themes && pnpm run build:icons && pnpm run build:forms",
         "build:apps": "pnpm run build:showcase && pnpm run build:volt",
         "build:resolver": "pnpm --filter auto-import-resolver build",
         "build:core": "pnpm --filter core build",
@@ -54,8 +54,8 @@
         "@rollup/plugin-node-resolve": "^15.2.3",
         "@rollup/plugin-terser": "^0.4.4",
         "eslint": "^9.19.0",
-        "eslint-config-prettier": "^10.0.1",
-        "eslint-plugin-prettier": "^5.2.3",
+        "eslint-config-prettier": "^10.1.8",
+        "eslint-plugin-prettier": "^5.5.4",
         "eslint-plugin-vue": "^9.32.0",
         "globals": "^15.14.0",
         "pnpm": "^9.6.0",
