--- a/packages/forms/package.json
+++ b/packages/forms/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "@primevue/forms",
-    "version": "4.3.9",
+    "name": "@mediahaus/primevue-forms",
+    "version": "4.3.9-mhfix-1",
     "author": "PrimeTek Informatics",
     "description": "",
     "homepage": "https://primevue.org/",
