--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@primevue/monorepo",
-    "version": "4.3.9",
+    "version": "4.3.9-mhfix-1",
     "author": "PrimeTek Informatics",
     "homepage": "https://primevue.org/",
     "repository": {
