--- a/packages/forms/package.json
+++ b/packages/forms/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@mediahaus/primevue-forms",
-    "version": "4.3.9-mhfix-0.2",
+    "version": "4.3.9-mhfix-0.3",
     "author": "PrimeTek Informatics",
     "description": "",
     "homepage": "https://primevue.org/",
@@ -54,7 +54,7 @@
     "dependencies": {
         "@primeuix/utils": "catalog:",
         "@primeuix/forms": "catalog:",
-        "@primevue/core": "workspace:*"
+        "@primevue/core": "^4.3.9"
     },
     "engines": {
         "node": ">=12.11.0"
