# autocomplete in forms fixed # custom column in data table fixed

--- a/packages/forms/package.json
+++ b/packages/forms/package.json
@@ -52,8 +52,8 @@
         "dev:link": "pnpm link --global && npm link"
     },
     "dependencies": {
-        "@primeuix/utils": "catalog:",
-        "@primeuix/forms": "catalog:",
+        "@primeuix/utils": "^0.6.1",
+        "@primeuix/forms": "^0.1.0",
         "@primevue/core": "^4.3.9"
     },
     "engines": {
